--- a/register.html
+++ b/register.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    <header>
+    <header class="container">
+      <section class="container">
       <h1>
         <a href="index.html">Styles Conference</a></h1>
+      </section>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
         <nav>
            <a href="index.html">Home</a>
@@ -18,7 +20,7 @@
            <a href="register.html">Register</a>
         </nav>
     </header>
-      <footer>
+      <footer class="container">
               <small>&copy; Styles Conference</small>
                  <nav>
            <a href="index.html">Home</a>
