--- a/register.html
+++ b/register.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    <header class="container">
-      <section class="container">
-      <h1>
-        <a href="index.html">Styles Conference</a></h1>
-      </section>
+    <header class="container group">
+
+      <h1 class="logo">
+        <a href="index.html">Styles <br> Conference</a>
+      </h1>
+
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-        <nav>
-           <a href="index.html">Home</a>
-           <a href="speakers.html">Speakers</a>
-           <a href="schedule.html">Schedule</a>
-           <a href="venue.html">Venue</a>
-           <a href="register.html">Register</a>
-        </nav>
+
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
+      </nav>
+
     </header>
-      <footer class="container">
+      <footer class="primary-footer container group">
               <small>&copy; Styles Conference</small>
                  <nav>
            <a href="index.html">Home</a>
