--- a/speakers.html
+++ b/speakers.html
@@ -14,7 +14,7 @@
 
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+       <nav class="nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -25,7 +25,7 @@
     </header>
       <footer class="primary-footer container group">
               <small>&copy; Styles Conference</small>
-                 <nav>
+                 <nav class="nav">
            <a href="index.html">Home</a>
            <a href="speakers.html">Speakers</a>
            <a href="schedule.html">Schedule</a>
