--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet"> 
   </head>
 
   <body>
@@ -17,9 +18,9 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+      <nav class="nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -47,7 +48,7 @@
 
       <!-- Speakers -->
 
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
         <a href="speakers.html">
           <h5>Speakers</h5>
           <h3>World-Class Speakers</h3>
@@ -57,7 +58,7 @@
 
       Schedule
 
-      --><section class="col-1-3">
+      --><section class="teaser col-1-3">
         <a href="schedule.html">
           <h5>Schedule</h5>
           <h3>Three Inspiring Days</h3>
@@ -67,7 +68,7 @@
 
       Venue
 
-      --><section class="col-1-3">
+      --><section class="teaser col-1-3">
         <a href="venue.html">
           <h5>Venue</h5>
           <h3>The Chicago Theatre</h3>
@@ -83,7 +84,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
