--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></li><!--
+        --> <li><a href="schedule.html">Schedule</a></li><!--
+        --><li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
 
     </header>
@@ -50,8 +52,9 @@
       <!-- Speakers -->
 
       <section class="teaser col-1-3">
+        <h5>Speakers</h5>
         <a href="speakers.html">
-          <h5>Speakers</h5>
+          <img src="assets/images/home/speakers.jpg" alt="Professional Speakers">
           <h3>World-Class Speakers</h3>
         </a>
         <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
@@ -60,8 +63,10 @@
       Schedule
 
       --><section class="teaser col-1-3">
+        <h5>Schedule</h5>
         <a href="schedule.html">
-          <h5>Schedule</h5>
+          <img src="assets/images/home/schedule.jpg" alt="Professional Speakers">
+          
           <h3>Three Inspiring Days</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -70,8 +75,10 @@
       Venue
 
       --><section class="teaser col-1-3">
+        <h5>Venue</h5>
         <a href="venue.html">
-          <h5>Venue</h5>
+          <img src="assets/images/home/venue.jpg" alt="Professional Speakers">
+         
           <h3>The Chicago Theatre</h3>
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
@@ -86,12 +93,14 @@
       <small>&copy; Styles Conference</small>
 
       <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
-      </nav>
+         <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --> <li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+          </ul>
+        </nav>
 
     </footer>
 
