--- a/venue.html
+++ b/venue.html
@@ -25,6 +25,22 @@
       </nav>
 
     </header>
+    <section class="row">
+      <div class="grid">
+        <section class="venue-theatre">
+          <div class="col-1-3">
+            <h2>Chicago Theatre</h2>
+            <p>175 N State St <br>Chicago, IL 60601</p>
+          </div><!--
+
+          --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11881.412123468432!2d-87.6276468!3d41.8852642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4700ddf60fcbfad6!2sThe%20Chicago%20Theatre!5e0!3m2!1sen!2sin!4v1583036234474!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>>
+        </section>
+        <section class="venue-hotel">
+          <div class="col-1-3"></div><!--
+            --><iframe class="col-2-3"></iframe>
+        </section>
+      </div>
+    </section>
       <footer class="primary-footer container group">
               <small>&copy; Styles Conference</small>
                  <nav class="nav">
